# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-08-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Tweak ERLANG_OTP_VER* autoconf discovery to utilize the 17.1.*
      OTP_VERSION file which might be installed

2014-08-01 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Move the cloudi_core_i_configurator:concurrency/1 function
      to cloudi_concurrency:count/1 so that it can be used easily by
      internal services

2014-07-31 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Split functionality not related to usage of the Dispatcher in
      the cloudi_service module into separate modules to make it easier for
      cloudi_core to expand
      (deprecated functions near the bottom of the cloudi_service module
       have been moved to the following modules:
       cloudi_environment, cloudi_service_name, cloudi_request,
       cloudi_request_info, cloudi_key_value)
    * Move internal cloudi_core source code filenames to have the prefix
      "cloudi_core_i_" to make it clearer what modules are meant for
      usage in non-cloudi_core source code
    * Add the elixir CloudILogger.ex module so elixir source code can
      utilize the same cloudi_logger.hrl logging macros that are used in
      erlang source code
    * Updated the Elixir.HelloWorld1 example to use the CloudILogger.ex module

2014-07-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Remove configuration arguments request_start and request_end from
      cloudi_service_oauth1 so that the service configuration options
      aspects_request_before and aspects_request_after can be used instead

2014-07-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add Elixir example
    * Fix cloudi_service_http_cowboy bug with output set to internal

2014-07-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Allow cloudi_service_api functions to take binary or string data