@@ -1,1 +1,1 @@
-SUBDIRS = flood hexpi http http_req messaging msg_size
+SUBDIRS = flood hexpi http http_req messaging msg_size request_rate
