@@ -1,0 +1,9 @@
+{application, cloudi_service_request_rate,
+  [{description, "CloudI Test Request Rate Erlang Application"},
+   {vsn, "1.3.3"},
+   {modules,
+    [cloudi_service_request_rate]},
+   {applications,
+    [cloudi_core,
+     stdlib,
+     kernel]}]}.
